@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 20-06-2005 added: replay gain support for aaccodec (aaccodec.dll in system\players\paplayer was updated)
  - 20-06-2005 updated: Spanish language file (Thnx to unknown)
  - 20-06-2005 updated: Korean language file (Thnx to AkoXko)
  - 20-06-2005 updated: Italian language file (Thnx to kotix)
